--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ jobs:
     vmImage: 'ubuntu-16.04'
 
   steps:
-  - script: |
+  - script:
       echo installing gauge
       sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-keys 023EDB0B
       echo deb https://dl.bintray.com/gauge/gauge-deb nightly main | sudo tee -a /etc/apt/sources.list
@@ -40,7 +40,7 @@ jobs:
       sudo apt-get install gauge
     displayName: 'install gauge'
 
-  - script: |
+  - script:
       echo starting gauge test
       ./gradlew clean gauge
     displayName: 'gauge test'
@@ -52,12 +52,12 @@ jobs:
 
 
   steps:
-  - script: |
+  - powershell:
       echo installing gauge
       choco install gauge
     displayName: 'install gauge'
 
-  - script: |
+  - powershell:
       echo starting gauge test
-      ./gradlew.bat clean gauge
+      gauge -v
     displayName: 'gauge test'
