--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,13 @@ jobs:
   pool:
     vmImage: 'macOS-10.13'
 
-  steps:
+  steps: |
   - script:
       echo installing gauge
       brew install gauge
     displayName: 'install gauge'
 
-  - script:
+  - script: |
       echo starting gauge test
       ./gradlew clean gauge
     displayName: 'gauge test'
@@ -32,7 +32,7 @@ jobs:
     vmImage: 'ubuntu-16.04'
 
   steps:
-  - script:
+  - script: |
       echo installing gauge
       sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-keys 023EDB0B
       echo deb https://dl.bintray.com/gauge/gauge-deb nightly main | sudo tee -a /etc/apt/sources.list
@@ -40,7 +40,7 @@ jobs:
       sudo apt-get install gauge
     displayName: 'install gauge'
 
-  - script:
+  - script: |
       echo starting gauge test
       ./gradlew clean gauge
     displayName: 'gauge test'
@@ -52,12 +52,12 @@ jobs:
 
 
   steps:
-  - powershell:
+  - powershell: |
       echo installing gauge
       choco install gauge
     displayName: 'install gauge'
 
-  - powershell:
+  - powershell: |
       echo starting gauge test
       gauge -v
     displayName: 'gauge test'
