--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,14 +50,18 @@ jobs:
   pool:
     vmImage: 'vs2017-win2016'
 
-
   steps:
-  - powershell: |
-      echo installing gauge
-      choco install gauge
-    displayName: 'install gauge'
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '10.x'
 
-  - powershell: |
-      echo starting gauge test
-      gauge -v
-    displayName: 'gauge test'
+    - powershell: |
+        echo installing gauge
+        npm install -g npm@latest
+        npm install -g @getgauge/cli
+      displayName: 'install gauge'
+
+    - powershell: |
+        echo starting gauge test
+        ./gradlew.bat clean gauge
+      displayName: 'gauge test'
