Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,5 +63,5 @@ jobs:
 
     - powershell: |
         echo starting gauge test
-        ./gradlew.bat clean gauge
+        .\gradlew.bat clean gauge
       displayName: 'gauge test'
